--- a/doc/Vagrantfile
+++ b/doc/Vagrantfile
@@ -9,7 +9,7 @@ Vagrant.configure(2) do |config|
 
   config.vm.provider "virtualbox" do |v|
     v.memory = 4096
-    v.cpus = 4
+    v.cpus = 2
     v.gui = false
   end
 
@@ -20,7 +20,7 @@ Vagrant.configure(2) do |config|
 
 
   config.vm.synced_folder ".", "/vagrant", disabled: true
-  config.vm.synced_folder "~/qa/th", "/home/vagrant/qa/th"
+  config.vm.synced_folder "~/reactor", "/home/vagrant/reactor"
 
 
   config.vm.provision "shell", inline: <<-SHELL
