--- a/src/main/resources/th.properties
+++ b/src/main/resources/th.properties
@@ -1,83 +1,83 @@
 #
-# Uncommnet the following to use your test machine name, maybe it is your laptop
+# Uncommnet the following to use your execution machine name, maybe it is your laptop
 # default is queried using command `hostname`
 #
-#qa.th.test.station=hostname
+#reactor.case.station=hostname
 
 #
-# This defines the number of test threads. The default is 0, meaning the thread number is defined by test suite.
+# This defines the number of case threads. The default is 0, meaning the thread number is defined by suite.
 #
-#qa.th.exec.thread.count=0
+#reactor.exec.thread.count=0
 
 #
-# This defines how many tests will be load, at once, to check QUEUED state. The default is 100.
+# This defines how many cases will be load, at once, to check QUEUED state. The default is 100.
 #
-# qa.th.test.load.limit=100
+# qa.th.case.load.limit=100
 
 #
-# This defines test log directory. The default is ${user.home}/qa/th/logs.
-#qa.th.log.path=
+# This defines case log directory. The default is ${user.home}/qa/th/logs.
+#reactor.log.path=
 
 #
-# This defines log level for individual tests. The default is DEBUG.
+# This defines log level for individual cases. The default is DEBUG.
 #
-#qa.th.test.log.level=TRACE
+#reactor.case.log.level=TRACE
 
 #
 # This defines if the suite result is visible on report. The default is true.
 #
-#qa.th.result.visibility=true
+#reactor.result.visibility=true
 
 #
-# This defines what test result database is used. The default is h2, meaning embeddeb DB. The anther option is mysql.
+# This defines what case result database is used. The default is h2, meaning embeddeb DB. The anther option is mysql.
 #
-#qa.th.db.type=
+#reactor.db.type=
 
 #
 # This defines database host name/IP and port. The default is 127.0.0.1:3306.
 #
-#qa.th.db.host=
+#reactor.db.host=
 
 #
-# This defines database schema used for test resuts. The default is testharness.
+# This defines database schema used for case results. The default is reactor.
 #
-#qa.th.db.schema=
+#reactor.db.schema=
 
 #
-# This defines user name used to access test resuts database. The default is th.
+# This defines user name used to access case results database. The default is th.
 #
-#qa.th.db.user=
+#reactor.db.user=
 
 #
-# This defines user password used to access test resuts database. The default is p@ssword.
+# This defines user password used to access case results database. The default is p@ssword.
 #
-#qa.th.db.pass=
+#reactor.db.pass=
 
 #
-# This defines test suite full class name. The default is com.tascape.qa.th.suite.JUnit4Suite.
+# This defines suite full class name. The default is com.tascape.reactor.suite.JUnit4Suite.
 #
-#qa.th.test.suite=
+#reactor.case.suite=
 
 #
-# This defines which test classes will be included during test case search. The default is empty, which means to 
-# include all test classes of running test suite.
+# This defines which case classes will be included during case search. The default is empty, which means to 
+# include all case classes of running suite.
 #
-#qa.th.debug.class.regex=
+#reactor.debug.class.regex=
 
 #
-# This defines which test methods will be included during test case search. The default is empty, which means to 
-# include all test methods of selected test classes.
+# This defines which case methods will be included during case search. The default is empty, which means to 
+# include all case methods of selected case classes.
 #
-#qa.th.debug.method.regex=
+#reactor.debug.method.regex=
 
 #
-# This defines which test classes will be excuded during test case search. The default is empty, which means to 
-# exclude NO test classes of running test suite.
+# This defines which case classes will be excuded during case search. The default is empty, which means to 
+# exclude NO case classes of running suite.
 #
-#qa.th.debug.class.exclude.regex=
+#reactor.debug.class.exclude.regex=
 
 #
-# This defines which test methods will be excluded during test case search. The default is empty, which means to 
-# exclude NO test methods of selected test classes.
+# This defines which case methods will be excluded during case search. The default is empty, which means to 
+# exclude NO case methods of selected case classes.
 #
-#qa.th.debug.method.exclude.regex=
+#reactor.debug.method.exclude.regex=
