--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.tascape</groupId>
     <artifactId>reactor</artifactId>
-    <version>1.2.34</version>
+    <version>1.2.35</version>
     <packaging>jar</packaging>
     <name>reactor</name>
 
@@ -19,6 +19,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.tascape</groupId>
+            <artifactId>reactor-ui</artifactId>
+            <version>1.2.0</version>
+        </dependency>
         <dependency>
             <groupId>com.tascape</groupId>
             <artifactId>reactor-junit4</artifactId>
@@ -136,7 +141,6 @@
                 <version>3.0.4</version>
                 <configuration>
                     <findbugsXmlOutput>true</findbugsXmlOutput>
-                    <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
                     <xmlOutput>true</xmlOutput>
                 </configuration>
             </plugin>
