--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootCategory=TRACE, CONSOLE, LOGFILE
+log4j.rootCategory=DEBUG, CONSOLE, LOGFILE
 
 
 log4j.logger.org.apache.http=ERROR
@@ -8,13 +8,13 @@ log4j.logger.org.openqa.jetty=ERROR
 log4j.logger.org.apache.jmeter=ERROR
 
 
-log4j.appender.CONSOLE.Threshold=DEBUG
+log4j.appender.CONSOLE.Threshold=INFO
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss.SSS} %-5p %t %C{1}.%M:%L - %m%n
 
 
-log4j.appender.LOGFILE.Threshold=TRACE
+log4j.appender.LOGFILE.Threshold=DEBUG
 log4j.appender.LOGFILE=org.apache.log4j.RollingFileAppender
 log4j.appender.LOGFILE.Append=false
 log4j.appender.LOGFILE.MaxFileSize=10MB
