--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -8,7 +8,7 @@ log4j.logger.org.openqa.jetty=ERROR
 log4j.logger.org.apache.jmeter=ERROR
 
 
-log4j.appender.CONSOLE.Threshold=INFO
+log4j.appender.CONSOLE.Threshold=DEBUG
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss.SSS} %-5p %t %C{1}.%M:%L - %m%n
