--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.tascape</groupId>
     <artifactId>reactor</artifactId>
-    <version>1.3.12</version>
+    <version>1.3.13</version>
     <packaging>jar</packaging>
     <name>reactor</name>
 
@@ -161,6 +161,32 @@
                 <version>3.8.1</version>
                 <configuration>
                     <showDeprecation>false</showDeprecation>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.rat</groupId>
+                <artifactId>apache-rat-plugin</artifactId>
+                <version>0.13</version>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <excludes>
+                        <exclude>Dockerfile</exclude>
+                        <exclude>Jenkinsfile</exclude>
+                        <exclude>*.md</exclude>
+                        <exclude>**/*.properties</exclude>
+                        <exclude>**/*.sql</exclude>
+                        <exclude>*.sh</exclude>
+                        <exclude>*.yml</exclude>
+                        <exclude>*.zip</exclude>
+                        <exclude>nbactions*</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
         </plugins>
